--- a/.gitignore
+++ b/.gitignore
@@ -173,7 +173,7 @@ cython_debug/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/Frontend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -186,7 +186,7 @@ cython_debug/
 /coverage
 
 # next.js
-/.next/
+/Frontend/.next/
 /out/
 
 # production
