--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,11 @@
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-howler": "^5.2.0",
     "react-sketch-canvas": "^6.2.0",
     "three": "^0.174.0"
   },
