--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
+    "firebase": "^11.5.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
