--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-howler": "^5.2.0",
     "react-sketch-canvas": "^6.2.0",
