--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-howler": "^5.2.0",
+    "react-icons": "^5.5.0",
     "react-sketch-canvas": "^6.2.0",
     "three": "^0.174.0"
   },
